# scapes

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tasks.todo
cmake/: FindShaderC.cmake  FindVulkan.cmake
docs/: asset_pipeline.txt  raytracing_api_design.cpp  render_graph_arch.cpp  render_graph_sample.json  render_graph_sample.yaml
models/: DamagedHelmet.blend1  DamagedHelmet.fbx  SciFiHelmet.fbx
shaders/: RenderState.inc  SceneTextures.inc  bakedBRDF.frag  brdf.inc  commonCube.vert  cubeToPrefilteredSpecular.frag  cubemapRenderer.frag  cubemapRenderer.vert  diffuseIrradiance.frag  frag.spv  gbuffer.frag  gbuffer.vert  hdriToCube.frag  pbr.frag  pbr.vert  shader.frag  (+3 more)
source/app/: Application.cpp  Application.h  ApplicationResources.cpp  ApplicationResources.h  CMakeLists.txt  CubemapRenderer.cpp  CubemapRenderer.h  IBLTexture.cpp  IBLTexture.h  IO.cpp  IO.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Mesh.cpp  Mesh.h  RenderGraph.cpp  RenderGraph.h  RenderMaterial.cpp  RenderMaterial.h  RenderModule.cpp  RenderModule.h  RenderPasses.cpp  RenderPasses.h  RenderScene.cpp  RenderScene.h  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneImporter.cpp  SceneImporter.h  Shader.cpp  Shader.h  SkyLight.cpp  SkyLight.h  SwapChain.cpp  (+39 more)
source/engine/: CMakeLists.txt  Scene.cpp  Scene.h  VulkanContext.cpp  VulkanContext.h  VulkanCubemapRenderer.cpp  VulkanCubemapRenderer.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanGraphicsPipelineBuilder.cpp  VulkanGraphicsPipelineBuilder.h  VulkanImGuiRenderer.cpp  VulkanImGuiRenderer.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipelineLayoutBuilder.cpp  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTexture2DRenderer.cpp  VulkanTexture2DRenderer.h  VulkanUtils.cpp  VulkanUtils.h
source/engine/common/: Log.cpp  ResourceManager.cpp  Resources.cpp  Resources.h
source/engine/game/: World.cpp
source/engine/game/flecs/: World.cpp  World.h
source/engine/render/: Mesh.cpp  Mesh.h  SanityCheck.cpp  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
source/engine/render/backend/: driver.cpp  driver.h
source/engine/render/backend/opengl/: Driver.cpp  Driver.h  Platform.h  PlatformEGL.cpp  PlatformGLX.cpp  PlatformWGL.cpp  Utils.cpp  Utils.h
source/engine/render/backend/vulkan/: Context.cpp  Context.h  DescriptorSetCache.cpp  DescriptorSetCache.h  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  ImageViewCache.cpp  ImageViewCache.h  PipelineCache.cpp  PipelineCache.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  PipelineLayoutCache.cpp  PipelineLayoutCache.h  RenderPassBuilder.cpp  RenderPassBuilder.h  RenderPassCache.cpp  RenderPassCache.h  Utils.cpp  Utils.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanGraphicsPipelineBuilder.cpp  VulkanPipelineLayoutBuilder.cpp  VulkanPipelineLayoutBuilder.h  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.h  VulkanUtils.cpp  VulkanUtils.h  device.cpp  device.h  driver.cpp  driver.h  platform.cpp  platform.h
source/engine/render/shaders/: Compiler.cpp  Compiler.h
source/engine/render/shaders/spirv/: Compiler.cpp  Compiler.h
source/scapes/foundation/: CMakeLists.txt  HashUtils.h  Log.cpp  SanityCheck.cpp
source/scapes/foundation/game/: World.cpp
source/scapes/foundation/game/flecs/: World.cpp  World.h
source/scapes/foundation/render/: Device.cpp
source/scapes/foundation/render/vulkan/: Context.cpp  Context.h  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  Device.cpp  Device.h  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  ImageViewCache.cpp  ImageViewCache.h  PipelineCache.cpp  PipelineCache.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  PipelineLayoutCache.cpp  PipelineLayoutCache.h  Platform.cpp  Platform.h  RenderPassBuilder.cpp  RenderPassBuilder.h  Utils.cpp  Utils.h
source/scapes/foundation/resources/: ResourceManager.cpp
source/scapes/foundation/resources/impl/: ResourceManager.cpp  ResourceManager.h  ResourcePool.cpp  ResourcePool.h
source/scapes/foundation/serde/: Yaml.cpp
source/scapes/foundation/shaders/: Compiler.cpp  ShaderCache.cpp  ShaderCache.h
source/scapes/foundation/shaders/spirv/: Compiler.cpp  Compiler.h
source/scapes/visual/: API.cpp  API.h  CMakeLists.txt  CubemapRenderer.cpp  CubemapRenderer.h  GlbImporter.cpp  GlbImporter.h  HdriImporter.cpp  HdriImporter.h  RenderGraph.cpp  RenderGraph.h  RenderUtils.cpp  RenderUtils.h  SanityCheck.cpp  Texture2DRenderer.cpp  Texture2DRenderer.h
source/scapes/visual/hardware/: Device.cpp
source/scapes/visual/hardware/vulkan/: Context.cpp  Context.h  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  Device.cpp  Device.h  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  ImageViewCache.cpp  ImageViewCache.h  PipelineCache.cpp  PipelineCache.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  PipelineLayoutCache.cpp  PipelineLayoutCache.h  Platform.cpp  Platform.h  RenderPassBuilder.cpp  RenderPassBuilder.h  Utils.cpp  Utils.h
source/scapes/visual/impl/: GlbImporter.cpp  GlbImporter.h  GpuBindings.cpp  GpuBindings.h  HdriImporter.cpp  HdriImporter.h  Material.cpp  Material.h  RenderGraph.cpp  RenderGraph.h
source/scapes/visual/resources/: IBLTexture.cpp  Mesh.cpp  RenderMaterial.cpp  Shader.cpp  Texture.cpp
source/scapes/visual/shaders/: Compiler.cpp  ShaderCache.cpp  ShaderCache.h
source/scapes/visual/shaders/spirv/: Compiler.cpp  Compiler.h
source/scapes/visual/utils/: CubemapRenderer.cpp  CubemapRenderer.h  Texture2DRenderer.cpp  Texture2DRenderer.h
(+140 files in other folders)
